feat: harden auth query field handling